# theia-offline-analysis

./: .gitignore
analysis-agent/Theia_Tagging/: .gitignore  Makefile  NOTE.yang  TheiaDB.cpp  TheiaDB.h  TheiaTagging.cpp  TheiaTagging.h  clear.sql  create_table.sql  db_tests.cpp  test.py
analysis-agent/Theia_Tagging/utils/: proc_index.py
libdft64/: INSTALL  Makefile.config  README.md
libdft64/examples/1_test/: 1_test  b.txt
libdft64/libdft64/: .cproject  Makefile.config
libdft64/libdft64/src/: Makefile.am  config.h  dta_api64.cc  dta_api64.h  ins_seq_patterns.cc  libdft_api64.cc  libdft_api64.h  libdft_core64.cc  libdft_core64.h  syscall_desc64.cc  syscall_desc64.h  tagmap64.cc  tagmap64.h
libdft64/libdft64/tests/error/: stack-overflow.c
libdft64/libdft64/tests/shell/: cat0.cmd  cat0.exp
libdft64/libdft64/tools/: Makefile.am  libdft-dta64.cc  libdft.c
libdft64/src/: Makefile.am  TheiaTagging.h  config.h  dta_api64.cc  dta_api64.h  syscall_desc64.cc  tag_traits.cc  tag_traits.h  tagmap64.cc
libdft64/tests/: Makefile.am  testsuite.at
libdft64/tests/error/: dummy.txt
libdft64/tools/: Makefile.am  Makefile.am.dft-only  libdft-dta64.cc
old/Theia_Tagging/: Makefile  TheiaDB.h  TheiaTagging.cpp  db_tests.cpp
old/libdft64/libdft64/: .gitignore  .project
old/libdft64/libdft64/src/: debuglog.cc  debuglog.h  dta_api64.cc  ins_seq_patterns.h  libdft_api64.cc  syscall_desc.c  syscall_desc64.cc  syscall_desc64.h
old/libdft64/libdft64/tests/error/: Makefile.am
old/libdft64/libdft64/tests/shell/: echo0.exp
old/query_generator/: Makefile  TheiaStoreCdmProducer.h
old/query_reader/: Makefile
query_generator/: query_generator.cpp
query_reader/: .gitignore  Makefile  TheiaCdmConsumer.cpp  TheiaCdmConsumer.h  query_reader.cpp
query_reader/utils/: proc_index.py  start_taint.py
replay-api/: client.cfg  requirements.txt  server.cfg  theia-client  theia-client.py  theia-server.py
replay-api/modules/: __init__.py  analysis.py  cdm.py  common.py  publisher.py  query.py  queue_manager.py  replay_utils.py  search.py
replay-api/tests/: forward_test.sh
replay-api/utils/: autopep8  clear.sql  create.sql
scripts/: search.py  start_taint.py
taint64/: .gitignore  README.md
taint64/ci/: package_api_bindings.sh  package_avrocpp.sh  package_boost.sh  package_dwarf.sh  package_libdft.sh  package_librdkafka.sh  package_pin.sh  package_serialization_schema.sh
taint64/examples/: .15229-15229.log.swp
taint64/examples/1_test/: 1_test.c
taint64/libdft64/: TODO
taint64/libdft64/src/: ins_seq_patterns.cc  libdft_api64.cc
taint64/libdft64/tools/: libdft64.cc
taint64/scripts/: README.md  create.sql  proc_index.py
taint64/taint64/: .gitignore  Makefile.am  Makefile.config  build.sh  configure.ac  install.sh
taint64/taint64/src/: .gitignore  .libdft_core64.cc.swp  Makefile.am  Makefile.am.dft-only  Makefile.am.u16  Makefile.am.u32  Makefile.am.u64  Makefile.am.u8  TheiaDB.cpp  TheiaDB.h  TheiaStoreCdmProducer.cpp  TheiaTagging.h  config.h  dta_api64.cc  dta_api64.h  libdft_api.c  libdft_api64.cc  libdft_api64.h  tag_traits.cc  tag_traits.h  tagmap_custom.h
taint64/taint64/tests/error/: stack-overflow.exp
taint64/taint64/tools/: Makefile.am  Makefile.am.u16  Makefile.am.u32  Makefile.am.u64  Makefile.am.u8  libdft-dta64.cc  syscall64.cc
theia-replay-server/: .gitignore  MANIFEST.in  Makefile  README.md  requirements.txt  setup.py
theia-replay-server/ci/: README.developer  package_all.sh  package_avro.sh  package_dependencies.sh  package_python_kafka.sh  package_python_tc_bbn.sh  package_quickavro.sh  package_restapi.sh  package_tc_bbn.sh
theia-replay-server/configs/: client.cfg  replay_server.gunicorn.conf  replay_supervisor.conf  server.cfg
theia-replay-server/docs/: INSTALL.md  readme-client.md
theia-replay-server/replay_server/: __init__.py  analysis.py  cdm.py  common.py  db_manager.py  publisher.py  queries.py  query.py  queue_manager.py  replay_utils.py  search.py  wsgi.py
theia-replay-server/scripts/: theia-client  theia-server  theia-server.py  theia_client
theia-replay-server/tests/: backward_test.sh  forward_test.sh
theia-replay-server/utils/: clear.sql  create.sql
